k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beautybook
  labels:
    name: beautybook
    environment: production
