k8s/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: beautybook
  labels:
    app: website
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: website
  type: ClusterIP
